# fearly

./: LICENSE  README.md  config.yml
fearly/: Cargo.toml  rocket.toml
fearly/.cargo/: config.toml  credentials.toml
fearly/src/: config.rs  lib.rs  main.rs  models.rs  serializers.rs  utils.rs  views.rs
fearly_frontend/: package.json  svelte.config.js  tsconfig.json  vite.config.ts
fearly_frontend/backup/: manifest.webmanifest
fearly_frontend/src/: app.css  app.html  hooks.server.ts
fearly_frontend/src/lib/: client.ts  types.ts  utilts.ts
fearly_frontend/src/lib/server/: +config.ts  requests.ts
fearly_frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
fearly_frontend/src/routes/list/: +page.svelte
fearly_frontend/static/: manifest.json
