[package]
name = "fearly"
version = "0.1.0"
edition = "2024"

[dependencies]
juli_orm_core = { version ="*", registry = "mje-kellnr"}
juli_orm = { version ="*", registry = "mje-kellnr"}
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.1", features = ["secrets", "json"] }
image = "0.25"
slugify = "0.1.0"
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1.21.3"
serde_yaml = "0.9.34"
surrealdb = "2.3.5"
argon2 = "0.5.3"
url = "2.2"
rpassword = "7"
base64 = "0.22.1"
rand = "0.9.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
